crates/pg_syntax/tests/snapshots/postgres_regress/char@29.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT ''::text::\"char\";"
---
SelectStmt@0..24
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..23
    TypeCast@7..23
      TypeCast@7..15
        AConst@7..9
          Sconst@7..9 "''"
        Typecast@9..11 "::"
        TypeName@11..15
          TextP@11..15 "text"
      Typecast@15..17 "::"
      TypeName@17..23
        Ident@17..23 "\"char\""
  Ascii59@23..24 ";"

