crates/pg_syntax/tests/snapshots/postgres_regress/char@6.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: INSERT INTO CHAR_TBL (f1) VALUES (2);
---
InsertStmt@0..37
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..20
    Ident@12..20 "CHAR_TBL"
  Whitespace@20..21 " "
  Ascii40@21..22 "("
  ResTarget@22..24
    Ident@22..24 "f1"
  Ascii41@24..25 ")"
  Whitespace@25..26 " "
  SelectStmt@26..35
    Values@26..32 "VALUES"
    Whitespace@32..33 " "
    Ascii40@33..34 "("
    List@34..35
      AConst@34..35
        Iconst@34..35 "2"
  Ascii41@35..36 ")"
  Ascii59@36..37 ";"

