crates/pg_syntax/tests/snapshots/postgres_regress/char@7.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO CHAR_TBL (f1) VALUES ('3');"
---
InsertStmt@0..39
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..20
    Ident@12..20 "CHAR_TBL"
  Whitespace@20..21 " "
  Ascii40@21..22 "("
  ResTarget@22..24
    Ident@22..24 "f1"
  Ascii41@24..25 ")"
  Whitespace@25..26 " "
  SelectStmt@26..37
    Values@26..32 "VALUES"
    Whitespace@32..33 " "
    Ascii40@33..34 "("
    List@34..37
      AConst@34..37
        Sconst@34..37 "'3'"
  Ascii41@37..38 ")"
  Ascii59@38..39 ";"

