crates/pg_syntax/tests/snapshots/postgres_regress/circle@13.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO CIRCLE_TBL VALUES ('<(100,200),10> x');"
---
InsertStmt@0..51
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..22
    Ident@12..22 "CIRCLE_TBL"
  Whitespace@22..23 " "
  SelectStmt@23..49
    Values@23..29 "VALUES"
    Whitespace@29..30 " "
    Ascii40@30..31 "("
    List@31..49
      AConst@31..49
        Sconst@31..49 "'<(100,200),10> x'"
  Ascii41@49..50 ")"
  Ascii59@50..51 ";"

