crates/pg_syntax/tests/snapshots/postgres_regress/circle@2.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: CREATE TABLE CIRCLE_TBL (f1 circle);
---
CreateStmt@0..36
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Table@7..12 "TABLE"
  Whitespace@12..13 " "
  RangeVar@13..23
    Ident@13..23 "CIRCLE_TBL"
  Whitespace@23..24 " "
  Ascii40@24..25 "("
  ColumnDef@25..34
    Ident@25..27 "f1"
    Whitespace@27..28 " "
    TypeName@28..34
      Ident@28..34 "circle"
  Ascii41@34..35 ")"
  Ascii59@35..36 ";"

