crates/pg_syntax/tests/snapshots/postgres_regress/circle@20.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: SELECT f1 FROM CIRCLE_TBL WHERE radius(f1) < 5;
---
SelectStmt@0..47
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..9
    ColumnRef@7..9
      Ident@7..9 "f1"
  Whitespace@9..10 " "
  From@10..14 "FROM"
  Whitespace@14..15 " "
  RangeVar@15..25
    Ident@15..25 "CIRCLE_TBL"
  Whitespace@25..26 " "
  Where@26..31 "WHERE"
  Whitespace@31..32 " "
  AExpr@32..46
    FuncCall@32..41
      Ident@32..38 "radius"
      Ascii40@38..39 "("
      ColumnRef@39..41
        Ident@39..41 "f1"
    Ascii41@41..42 ")"
    Whitespace@42..43 " "
    Ascii60@43..44 "<"
    Whitespace@44..45 " "
    AConst@45..46
      Iconst@45..46 "5"
  Ascii59@46..47 ";"

